# esp32c3_remote_switch

./: .gitignore  .gitmodules  README.md
MCU/: CMakeLists.txt  partitions.csv  sdkconfig
MCU/main/: CMakeLists.txt  app_adc.c  app_adc.h  app_gitt.c  app_gitt.h  app_led.c  app_led.h  app_nvs.c  app_nvs.h  app_relay.c  app_relay.h  app_spiffs.c  app_spiffs.h  app_time.c  app_time.h  app_wifi.c  app_wifi.h  main.c
PCB/: ESP32C3_REMOTE_SWITCH_PCB.PcbDoc  ESP32C3_REMOTE_SWITCH_PCB_Project.PrjPCB  ESP32C3_REMOTE_SWITCH_Sheet.SchDoc
SHELL/: ESP32C3_REMOTE_SWITCH_PCB.SLDPRT  ESP32C3_REMOTE_SWITCH_SHELL.SLDPRT  ESP32C3_REMOTE_SWITCH_SHELL.STL  ESP32C3_REMOTE_SW_SHELL.SLDASM
